--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1>Hey. I'm big heading</h1>
-<p>Hey. I'm paragragh element. Cool huh?</p>
-<a href="http://google.com" target=_"Blank" title=_"Let go to google">Click me! I'm a link!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Addis Square</title>
+</head>
+<body>
+	<h1>Hey. I'm big heading</h1>
+	<p>Hey. I'm <b>paragragh</b> element. Cool huh?</p>
+	<a href="http://google.com" target=_"Blank" title=_"Let go to google">Click me! I'm a link!</a>
+	<img src="img/cat.jpeg">
+	<p>My name is:<br> Kitty cat<p>
+</body>
+</html>
